--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,14 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>ch20</module>
+        <module>ch3</module>
     </modules>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
