--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>ch3</module>
         <module>ch4</module>
         <module>ch5</module>
+        <module>ch14</module>
     </modules>
     <dependencies>
         <dependency>
@@ -20,6 +21,11 @@
             <artifactId>junit</artifactId>
             <version>4.13</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.3.0.RELEASE</version>
         </dependency>
     </dependencies>
     <build>
