--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>ch4</module>
         <module>ch5</module>
         <module>ch14</module>
+        <module>ch18_JavaIO</module>
+        <module>ch21</module>
     </modules>
     <dependencies>
         <dependency>
