正则表达式的创建，正则表达式对字符串的匹配和替换，StringBuilder类使用

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>ch18</module>
         <module>ch21</module>
         <module>common</module>
+        <module>ch13</module>
     </modules>
     <dependencies>
         <dependency>
