--- a/ch13/pom.xml
+++ b/ch13/pom.xml
@@ -9,13 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ch18_JavaIO</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>org.jc</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <artifactId>ch13</artifactId>
+
 
 </project>
