一个2m的水坑，做功Q/2的积分

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>ch21</module>
         <module>common</module>
         <module>ch13</module>
+        <module>math</module>
     </modules>
     <dependencies>
         <dependency>
