增加第七章组合，继承，代理等代码复用方式

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>ch13</module>
         <module>math</module>
         <module>ch6</module>
+        <module>ch7</module>
     </modules>
     <dependencies>
         <dependency>
