--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>ch6</module>
         <module>ch7</module>
         <module>ch8</module>
+        <module>ch9</module>
     </modules>
     <dependencies>
         <dependency>
