增加工厂模式

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <module>ch7</module>
         <module>ch8</module>
         <module>ch9</module>
+        <module>ch11</module>
+        <module>ch17</module>
     </modules>
     <dependencies>
         <dependency>
