--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>ch11</module>
         <module>ch17</module>
         <module>applet</module>
+        <module>tensorflow</module>
     </modules>
     <dependencies>
         <dependency>
@@ -39,7 +40,18 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.3.0.RELEASE</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.tensorflow/libtensorflow -->
+        <dependency>
+            <groupId>org.tensorflow</groupId>
+            <artifactId>libtensorflow</artifactId>
+            <version>1.15.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.tensorflow/libtensorflow_jni_gpu -->
+        <dependency>
+            <groupId>org.tensorflow</groupId>
+            <artifactId>libtensorflow_jni_gpu</artifactId>
+            <version>1.15.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
